@@ -8,7 +8,8 @@
         "fromJSON": ["wb-nm-helper", "-s"],
         "restartDelayMS": 4000,
         "service": "wb-connection-manager",
-        "needReload": true
+        "needReload": true,
+        "editor": "network-connections"
     },
     "definitions": {
         "switch_connections": {
@@ -53,49 +54,52 @@
         },
         "802-11-wireless-security": {
             "title": "Security",
-            "type": "object",
-            "properties": {
-                "security": {
-                    "type": "string",
-                    "title": "Security",
-                    "enum": ["none", "wpa-psk"],
-                    "options": {
-                        "enum_titles": ["None", "WPA/WPA2 Personal"]
-                    },
-                    "default": "wpa-psk",
-                    "propertyOrder": 1
-                },
-                "key-mgmt": {
-                    "type": "string",
-                    "enum": ["wpa-psk"],
-                    "options": {
-                        "hidden": true,
-                        "dependencies": {
-                            "security": "wpa-psk"
-                        },
-                        "wb": {
-                            "show_editor": true
-                        }
-                    }
-                },
-                "psk": {
-                    "type": "string",
-                    "title": "Password",
-                    "minLength": 8,
-                    "maxLength": 63,
-                    "options": {
-                        "dependencies": {
-                            "key-mgmt": "wpa-psk"
-                        },
-                        "wb": {
-                            "show_editor": true
+            "oneOf": [
+                {
+                    "type": "object",
+                    "title": "None",
+                    "properties": {
+                        "security": {
+                            "type": "string",
+                            "enum": ["none"],
+                            "options": {
+                                "hidden" : true
+                            }
                         }
                     },
-                    "propertyOrder": 2
+                    "required": ["security"]
+                },
+                {
+                    "type": "object",
+                    "title": "WPA/WPA2 Personal",
+                    "properties": {
+                        "security": {
+                            "type": "string",
+                            "enum": ["wpa-psk"],
+                            "options": {
+                                "hidden": true
+                            }
+                        },
+                        "key-mgmt": {
+                            "type": "string",
+                            "enum": ["wpa-psk"],
+                            "options": {
+                                "hidden": true
+                            }
+                        },
+                        "psk": {
+                            "type": "string",
+                            "title": "Password",
+                            "minLength": 8,
+                            "maxLength": 63,
+                            "propertyOrder": 2
+                        }
+                    },
+                    "required": ["security", "key-mgmt", "psk"]
                 }
-            },
-            "required": ["security"],
+            ],
             "options": {
+                "keep_oneof_values": false,
                 "wb": {
                     "disable_title": true
                 }
@@ -651,7 +655,6 @@
         },
         "nm_ethernet": {
             "title": "Ethernet",
-            "description": "Configured in NetworkManager",
             "allOf": [
                 {
                     "type": "object",
@@ -725,7 +728,6 @@
         },
         "nm_wifi": {
             "title": "Wi-Fi",
-            "description": "Configured in NetworkManager",
             "allOf": [
                 {
                     "type": "object",
@@ -821,7 +823,6 @@
         },
         "nm_wifi_ap": {
             "title": "Wi-Fi access point",
-            "description": "Configured in NetworkManager",
             "allOf": [
                 {
                     "type": "object",
@@ -909,7 +910,6 @@
         },
         "nm_modem": {
             "title": "Modem",
-            "description": "Configured in NetworkManager",
             "allOf":[
                 {
                     "type": "object",
@@ -921,24 +921,13 @@
                             },
                             "enum": ["02_nm_modem"]
                         },
-                        "gsm_auto-config": {
-                            "type": "boolean",
-                            "default": true,
-                            "title": "gsm_auto-config_title",
-                            "_format": "checkbox",
-                            "propertyOrder": 3
-                        },
                         "gsm_apn": {
                             "type": "string",
                             "title": "APN",
                             "propertyOrder": 4,
-                            "minLength": 1,
                             "options": {
-                                "dependencies": {
-                                    "gsm_auto-config": [false]
-                                },
-                                "wb": {
-                                    "show_editor": true
+                                "inputAttributes": {
+                                    "placeholder":  "gsm_auto-config_title"
                                 }
                             }
                         },
@@ -992,7 +981,7 @@
                             "_format": "edWb"
                         }
                     },
-                    "required": ["type", "gsm_auto-config"]
+                    "required": ["type", "gsm_apn", "ipv4"]
                 },
                 {
                     "$ref": "#/definitions/nm_connection"
@@ -1011,14 +1000,16 @@
             "properties": {
                 "connection_id": {
                     "type": "string",
-                    "title": "Connection name",
                     "minLength": 1,
-                    "propertyOrder": 1
+                    "propertyOrder": 1,
+                    "options": {
+                        "hidden": true
+                    }
                 },
                 "connection_autoconnect": {
                     "type": "boolean",
                     "default": true,
-                    "title": "Auto",
+                    "title": "Autoconnect",
                     "_format": "checkbox",
                     "propertyOrder": 2
                 },
@@ -1030,7 +1021,7 @@
                     "default": ""
                 }
             },
-            "required": ["connection_id", "connection_uuid"]
+            "required": ["connection_autoconnect", "connection_id", "connection_uuid"]
         },
         "nm_ipv4_manual": {
             "type": "object",
@@ -1088,9 +1079,7 @@
                     "description": "Comma-separated list of IP addresses",
                     "propertyOrder": 16,
                     "options": {
-                        "wb": {
-                            "show_editor": true
-                        }
+                        "show_opt_in": true
                     }
                 },
                 "dns-search": {
@@ -1099,9 +1088,7 @@
                     "description": "Comma-separated list of domains",
                     "propertyOrder": 17,
                     "options": {
-                        "wb": {
-                            "show_editor": true
-                        }
+                        "show_opt_in": true
                     }
                 }
             },
@@ -1129,9 +1116,7 @@
                     "title": "Hostname to be requested",
                     "propertyOrder": 12,
                     "options": {
-                        "wb": {
-                            "show_editor": true
-                        }
+                        "show_opt_in": true
                     }
                 },
                 "dhcp-client-id": {
@@ -1139,9 +1124,7 @@
                     "title": "Client identifier",
                     "propertyOrder": 13,
                     "options": {
-                        "wb": {
-                            "show_editor": true
-                        }
+                        "show_opt_in": true
                     }
                 },
                 "route-metric": {
@@ -1161,9 +1144,7 @@
                     "description": "Comma-separated list of IP addresses",
                     "propertyOrder": 16,
                     "options": {
-                        "wb": {
-                            "show_editor": true
-                        }
+                        "show_opt_in": true
                     }
                 },
                 "dns-search": {
@@ -1172,9 +1153,7 @@
                     "description": "Comma-separated list of domains",
                     "propertyOrder": 17,
                     "options": {
-                        "wb": {
-                            "show_editor": true
-                        }
+                        "show_opt_in": true
                     }
                 }
             },
@@ -1447,7 +1426,7 @@
     "translations": {
         "en": {
             "connection_title": "Connection",
-            "gsm_auto-config_title": "Define APN according to information from SIM-card",
+            "gsm_auto-config_title": "define APN according to information from SIM-card",
             "con_switch_desc": "The controller checks the connection with the Internet every 5 seconds, if there is no connection, the current connection will down and the next one in the list will be activated. Further, every 60 seconds the controller will try to up one of the connections with a higher priority and, if it succeeds, will switch to it.",
             "mac-pattern-message": "Must be six hexadecimal byte values divided by colon (example f2:c8:14:48:d3:97)",
             "interfaces_description": "Configured in /etc/network/interfaces",
@@ -1456,6 +1435,7 @@
         },
         "ru": {
             "Network connections": "Сетевые соединения",
+            "Autoconnect": "Подключаться автоматически",
             "Auto": "Включать автоматически",
             "Name": "Имя интерфейса",
             "Allow hotplug": "Разрешить горячее подключение",
@@ -1499,10 +1479,9 @@
             "interfaces_description": "Настроено в /etc/network/interfaces",
             "old_interface_deprecated_description": "Доступно управление через NetworkManager - это современный сервис настройки, поддержка которого сейчас развивается в Wiren Board. Для перехода на NetworkManager <b>удалите это соединение</b> и используйте существующее из списка выше (или создайте новое, если нужно)",
             "loopback_deprecated_description": "Ручные определения loopback-интерфейсов <b>можно удалить</b>, systemd создаёт loopback автоматически",
-            "Configured in NetworkManager": "Настроено в NetworkManager",
             "Interface": "Имя интерфейса",
             "connection_title": "Соединение",
-            "gsm_auto-config_title": "Определить APN автоматически на основании информации об операторе SIM-карты",
+            "gsm_auto-config_title": "определить APN автоматически на основании информации об операторе SIM-карты",
             "Connection name": "Название соединения",
             "Only for SIM slot": "Только для SIM-слота",
             "Only for device": "Только для устройства",
