@@ -5,6 +5,7 @@ import time
 from collections import namedtuple
 from enum import Enum
 from ipaddress import IPv4Interface
+from socket import htonl, ntohl
 from typing import List, TypedDict
 
 import dbus
@@ -63,14 +64,14 @@ def to_dns_list(string):
     if not string:
         return None
     return dbus.Array(
-        [dbus.UInt32(int(IPv4Interface(s.strip()).network.network_address)) for s in string.split(",")]
+        [dbus.UInt32(htonl(int(IPv4Interface(s.strip()).network.network_address))) for s in string.split(",")]
     )
 
 
 def to_dns_string(array):
     if not array:
         return None
-    return ",".join([str(IPv4Interface((s, "32")).network.network_address) for s in array])
+    return ",".join([str(IPv4Interface((ntohl(s), "32")).network.network_address) for s in array])
 
 
 def to_dns_search_list(string):
@@ -87,6 +88,10 @@ def to_dns_search_string(array):
 
 def not_empty_string(val):
     return None if val is None or len(val) == 0 else val
+
+
+def to_string_default_empty(val):
+    return "" if val is None else val
 
 
 def to_dbus_byte_array(val):
@@ -219,7 +224,7 @@ ipv4_params = [
 connection_params = [
     Param("connection.uuid", to_dbus=not_empty_string),
     Param("connection.id"),
-    Param("connection.interface-name", to_dbus=not_empty_string),
+    Param("connection.interface-name", to_dbus=not_empty_string, from_dbus=to_string_default_empty),
     Param("connection.autoconnect", from_dbus=to_bool_default_true),
 ]
 
@@ -388,10 +393,16 @@ class ModemConnection(Connection):
     def __init__(self) -> None:
         params = [
             Param("gsm.sim-slot", from_dbus=minus_one_is_none),
-            Param("gsm.auto-config", from_dbus=to_bool_default_false),
-            Param("gsm.apn"),
+            Param("gsm.apn", to_dbus=not_empty_string, from_dbus=to_string_default_empty),
         ]
         Connection.__init__(self, "gsm", METHOD_MODEM, params)
+
+    def set_dbus_options(self, con: DBUSSettings, iface: JSONSettings):
+        super().set_dbus_options(con, iface)
+        if con.get_opt("gsm.apn"):
+            con.set_value("gsm.auto-config", False)
+        else:
+            con.set_value("gsm.auto-config", True)
 
 
 def apply(iface, c_handler, network_manager: NetworkManager, dry_run: bool) -> bool:
@@ -476,7 +487,9 @@ class NetworkManagerAdapter:
         for dev in self.network_manager.get_devices():
             mapping = type_mapping.get(dev.get_property("DeviceType"))
             if mapping:
-                devices.append({"type": mapping, "iface": dev.get_property("Interface")})
+                iface = dev.get_property("Interface")
+                if iface != "dbg0":
+                    devices.append({"type": mapping, "iface": iface})
         return devices
 
     def get_wifi_ssids(self, scan_timeout: datetime.timedelta) -> List[str]:
