@@ -1,6 +1,7 @@
 wb-nm-helper (1.19.0) stable; urgency=medium
 
   * New tier-oriented switching conception
+  * Support new editor in homeui
 
  -- Aleksandr Kazadaev <aleksandr.kazadaev@wirenboard.com>  Mon, 23 Jan 2023 18:00:00 +0600
 
